--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <li><a href="galeria.html">galeria</a></li>
     <li><a href="calculadora.html">calculadora</a></li>
     <li><a href="mueveobjeto.html">mueve objeto</a></li>
+    <li><a href="factorial.html">factorial</a></li>
+    <li><a href="video.html">video</a></li>
 </ul>
 </body>
 </html>
